# F-Finder

./: Cargo.toml  LICENSE.txt  README.md
src/: main.rs
src/algorithim/: mod.rs  models.rs  search.rs
