[package]
name = "F-Finder"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.150"
clap = {version = "4.6.1", features = ["derive"]}
serde = {version = "1.0.228", features = ["derive"]}
walkdir = "2.5.0"
humantime-serde = "1"
tokio = {version = "1.52.3", features = ["rt-multi-thread", "macros"]}
sysinfo = "0.30"
whoami = "2.1.2"